# test

./: .gitignore  CMakeLists.txt
Assignment/: Assignment.pro  list.h
Desktop/Dataspilldesign/go/hello_go-build/: CMakeCache.txt  CTestTestfile.cmake  HelloGo.cbp  Makefile  cmake_install.cmake
Desktop/Dataspilldesign/go/hello_go-build/client/: CTestTestfile.cmake  Makefile  client  client.cbp  cmake_install.cmake  moc_goenginemodel.cpp  moc_goenginemodel.cpp_parameters  moc_guiapplication.cpp  moc_guiapplication.cpp_parameters  qrc_qml.cpp
Desktop/Dataspilldesign/go/hello_go-build/client/resources/: qml.qrc.depends
Desktop/Dataspilldesign/go/hello_go-build/mylibrary/: CTestTestfile.cmake  Makefile  cmake_install.cmake  libmylibrary.dylib  mylibrary.cbp  test_go_engine_tests  test_test
Desktop/Dataspilldesign/go/hello_go-build/report/: CTestTestfile.cmake  Makefile  bibliography.bib  cmake_install.cmake  report.aux  report.bbl  report.blg  report.cbp
Desktop/Dataspilldesign/lin/: student.h
Desktop/Dataspilldesign/student/: CMakeLists.txt
PycharmProjects/CNN/: computation.py  dataset.py  test.py  testtrain.tfrecords
PycharmProjects/CNN/.Jessie/my_graph/: events.out.tfevents.1490285098.Jessie-MBPro.local
PycharmProjects/CNN/Users/Jessie/Desktop/my_graph/: events.out.tfevents.1490285706.Jessie-MBPro.local
benchmarks/: CMakeLists.txt
benchmarks/benchmark_01/: CMakeLists.txt  benchmark_01.cpp
client/: CMakeLists.txt  client.cpp  goenginemodel.cpp  goenginemodel.h  guiapplication.cpp  guiapplication.h
client/resources/: qml.qrc
client/resources/qml/: BoardSquare.qml  BoardView.qml  GameBoardPage.qml  NewGamePage.qml  SwipeArea.qml  gui.qml
learning/: single.cpp  single.h
mylibrary/: CMakeLists.txt  benchmark.h  go.cpp  go.h  player.cpp  player.h  randomai.cpp  randomai.h
mylibrary/tests/: go_engine_tests.cpp  test.cpp
report/: CMakeLists.txt  bibliography.bib  report.tex
static/: CMakeLists.txt
